# apple-notes-py

./: CLAUDE.md  README.md  TODO.md  pyproject.toml
plugin/claude-code/: .mcp.json
plugin/claude-code/.claude-plugin/: plugin.json
plugin/claude-code/skills/note-operations/: SKILL.md
plugin/claude-code/skills/note-triage/: SKILL.md
src/apple_notes/: __init__.py  cli.py  client.py  convert.py  db.py  decode.py  jxa.py  mcp_server.py  models.py  search.py
tests/: test_cli.py  test_models.py
