[project]
name = "apple-notes-py"
version = "0.2.0"
description = "Python library, CLI, and MCP server for Apple Notes"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "protobuf>=5.29",
    "markdownify>=0.13",
    "markdown>=3.6",
]

[project.optional-dependencies]
search = [
    "lancedb>=0.20",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "build>=1.0",
]

[project.scripts]
apple-notes = "apple_notes.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apple_notes"]
